Cleanup av test { ... }.